<?xml version="1.0"?>
<package format="2">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>The bringup package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>app</depend>
  <depend>controller</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
