<package format="2">
  <name>roslander_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for roslander</p>
    <p>This package contains configuration data, 3D models and launch files
for roslander robot</p>
  </description>
  <author>ubuntu</author>
  <maintainer email="ubuntu@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>roslander_gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
